[FIX] trigger container--visible after loader ⛩

--- a/assets/styles/layout/_homeProject.scss
+++ b/assets/styles/layout/_homeProject.scss
@@ -41,6 +41,7 @@
 }
 
 .project__titleBox{
+	color: #353535;
 	position: absolute;
 	height: 60px;
 	width: 350px;
@@ -80,6 +81,7 @@
 }
 
 .project__title{
+	color: #353535;
 	top: 100%;
     height: 60px;
 	position: absolute;
